# practice_app

./: Cargo.toml  README.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  Auth.tsx  CreateUser.tsx  CredentialForm.tsx  Home.tsx  Login.tsx  Logout.tsx  Navbar.tsx  Pieces.tsx  PracticeSessions.tsx  api-types.d.ts  fetch.ts
frontend/src/css/: App.css  CredentialForm.module.css  Login.module.css  Navbar.module.css  Pieces.module.css  PracticeSessions.module.css
migrations/2023-08-01-142224_create_practice_sessions/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
