[package]
name = "practice_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["mysql", "chrono", "r2d2"] }
dotenvy = "0.15"
chrono = { version = "0.4.26", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
axum = "0.6.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"